tests/invalid/generic_object_constructor_missing_arguments.wio
object Box<T> {
    OnConstruct() {
    }
}

fn Entry() -> i32 {
    let box = Box();
    return 0;
}
